--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,12 @@ body>.column {
     animation: spin 1s linear infinite;
 }
 
+.imageRotate {
+    -webkit-animation: spin 2s linear infinite;
+    -moz-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
 @-moz-keyframes spin {
     100% {
         -moz-transform: rotate(360deg);
