--- a/css/realstyle.css
+++ b/css/realstyle.css
@@ -27,10 +27,11 @@ h1 {
     background-image: url("/assets/japan.jpg");
     filter: blur(8px);
     -webkit-filter: blur(8px);
-    height: 100%;
+    height: 100vw;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .woozpc {
@@ -46,7 +47,7 @@ h1 {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -40vh);
     z-index: 2;
     width: 80%;
     padding: 20px;
