make blur more consistent
damnjelly stinks

--- a/css/realstyle.css
+++ b/css/realstyle.css
@@ -2,6 +2,7 @@ body, html {
     height: 99%;
     font-family: 'Open Sans';
     font-size: 22px;
+    background: #000;
   }
 
 a:link {
@@ -25,13 +26,18 @@ h1 {
 } Lazy to save the colours somewhere else */
 .bg-image {
     background-image: url("/assets/japan.jpg");
-    filter: blur(8px);
-    -webkit-filter: blur(8px);
-    height: 100vw;
+    filter: blur(0.5vmax);
+    -webkit-filter: blur(0.5vmax);
+    height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .woozpc {
