.tab-left and add background to spoiler
Background to spoiler is to let visitors know that something is indeed there

--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,13 @@ body>.column {
     height: 110px;
 }
 
+.tab-left {
+    margin-left: 0.25rem;
+}
+
 .spoiler {
     color: transparent;
+    background-color: #121212;
 }
 
 .spoiler:hover {
